--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,4 +1,9 @@
 <% provide(:title, 'FAQ') %>
-<h1>FAQ</h1>
-<p>This is the FAQ page
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to project2</h1>
+  <h2>
+    This is the FAQ page for Project2.
+  </h2>
+</div>
+
+<%= link_to image_tag("faq1.png", alt: "FAQ"), 'http://rubyonrails.org/' %>
