--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,8 @@
 <% provide(:title, 'About Us') %>
-<h1>About Us</h1>
-<p> This is the about us page
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to project2</h1>
+  <h2>
+    This is the about page for project2.
+  </h2>
+</div>
+<%= link_to image_tag("about.png", alt: "About"), 'http://rubyonrails.org/' %>
