--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -1,4 +1,8 @@
 <% provide(:title, 'Blog') %>
-<h1>Blog</h1>
-<p>This is the blog page
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to project2</h1>
+  <h2>
+    This is the Blog page for project2.
+  </h2>
+</div>
+<%= link_to image_tag("blog.jpg", alt: "Blog"), 'http://rubyonrails.org/' %>
